# My-CXX-Projects

./: .gitignore  README.md
Array Sorter/: CMakeLists.txt  README.md  run.bat
Array Sorter/include/: arraySorter.h
Array Sorter/src/: arraySorter.cpp  main.cpp
Box Of Numbers/: CMakeLists.txt  README.md  log.txt  run.bat
Box Of Numbers/include/: boxOfNumbers.h
Box Of Numbers/src/: boxOfNumbers.cpp  main.cpp
Dice Roller/: CMakeLists.txt  README.md  run.bat
Dice Roller/include/: diceroller.h
Dice Roller/src/: diceroller.cpp  main.cpp
Guess The Number/: CMakeLists.txt  README.md  run.bat
Guess The Number/include/: guessthenumber.h
Guess The Number/src/: guessthenumber.cpp  main.cpp
Library Management System/: CMakeLists.txt  README.md  main.cpp  run_main.bat  run_tests.bat
Library Management System/include/: Book.h  Library.h  Transaction.h  User.h
Library Management System/src/: Book.cpp  Library.cpp  Transaction.cpp  User.cpp
Library Management System/tests/: LibraryTests.cpp
Recursive Book Count/: CMakeLists.txt  README.md  run.bat
Recursive Book Count/include/: bookShelf.h
Recursive Book Count/src/: bookShelf.cpp  main.cpp
Simple Calculator/: CMakeLists.txt  README.md  README.txt  log.txt  run.bat
Simple Calculator/include/: simpleCalculator.h
Simple Calculator/src/: main.cpp  simpleCalculator.cpp
Student Record System/: CMakeLists.txt  README.md
Student Record System/include/: StudentRecordSystem.h
Student Record System/src/: StudentRecordSystem.cpp  main.cpp
Student Record System/tests/: StudentRecordSystemTest.cpp
